
===========
Changes log
===========

- @version-full@ (@release-date@)
    - Misc
      - Upgraded fileupload dependency to 1.3.3 and commons.io to 2.6 in order to prevent
        security issues (CVE-2014-0050 and CVE-2016-3092). Issue #1310.
        Reported by Arjohn Kampman.

- 2.4.0 (09/01/2018)
    - Enhancements
      - Added automatic deserialization of annotated exceptions in GWT edition. Issue #1306.
        Reported by Roland Beuker.
    - Misc
      - Refreshed copyright headers

- 2.4 Milestone 1 (10/28/2017)

    - Bugs fixed
      - Fixed parsing of Restlet Method annotations using JDK9. Issue #1285.
        Reported by adolski.
    - Enhancements
      - Upgraded JDK version 1.8.
      - Mavenify the common source code
    - Misc
      - Deprecated extensions Javamail, Lucene, Nio, Wadl.
      - Refreshed copyright headers.
      - Leveraged JDK's version of Base64.
      - Upgraded Jetty to version 9.3.21.v20170918. Leads to remove support of SPDY protocol.
      - Renamed apispark extension to platform, and removed the support of API description.
      - Removed deprecated extensions e4, JDBC, JSSLUtils, ROME, SDC, SIP, XDB, XStream.