@@ -4,6 +4,9 @@ Changes log
 ===========
 
 - @version-full@ (@release-date@)
+    - Bugs fixed
+      - Make sure the Jetty server has released all resources when it fails to start. Issue #1311.
+        Reported by primosK.
     - Misc
       - Upgraded fileupload dependency to 1.3.3 and commons.io to 2.6 in order to prevent
         security issues (CVE-2014-0050 and CVE-2016-3092). Issue #1310.
